Fixed SSID list preloader spacing.  Initialize SAP after DHCP has settled from Photon SoftAP connection.

--- a/client/softap-browser.less
+++ b/client/softap-browser.less
@@ -53,6 +53,11 @@
 .loading-header {
   margin-left: 20px;
 }
+#ssid-preloader {
+  height: 100px;
+  width: 100px;
+  margin: 20px;
+}
 #ssid-table .photon-ssid-option {
   padding: 10px;
   cursor: pointer;
